minor changes, organize imports